hard-gists/6874ff814ab7f2530b2a/run.log
=== Docker Run Log for 6874ff814ab7f2530b2a ===
Started at: Mi 29. Okt 16:44:20 CET 2025

[2025-10-29 16:44:21] START: Running container for 6874ff814ab7f2530b2a
[2025-10-29 16:44:21] SUCCESS: Container 64a7d0b98bbe59b2a0b0cb5b24379da2fb24be98b10f3e368b019e6303f13b3f started for 6874ff814ab7f2530b2a
=== Container logs for 6874ff814ab7f2530b2a ===
  File "/snippet.py", line 93
    print dot_data.GetError().GetCString()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6874ff814ab7f2530b2a ===
[2025-10-29 16:44:23] INFO: Container 64a7d0b98bbe59b2a0b0cb5b24379da2fb24be98b10f3e368b019e6303f13b3f has stopped
